force-app/main/default/objects/Document_Request_Settings__c/Document_Request_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description
  >Configuration settings for Document Request portal URLs and behavior.</description>
    <label>Document Request Settings</label>
</CustomObject>