force-app/main/default/objects/Document_Request_Settings__c/fields/Base_Domain__c.field-meta.xml
<CustomField>
    <fullName>Base_Domain__c</fullName>
    <description
  >The base domain for the document upload portal (e.g., portal.example.com). Do not include https:// prefix.</description>
    <inlineHelpText
  >Enter the domain without https:// (e.g., portal.example.com)</inlineHelpText>
    <label>Base Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>