force-app/main/default/objects/Document_Request_Settings__c/fields/Enable_Internal_Debug__c.field-meta.xml
<CustomField>
    <fullName>Enable_Internal_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >When enabled, turns on console logging for internal components (documentRequestQuickAction and documentReviewPanel). Use for troubleshooting administrator-facing functionality.</description>
    <inlineHelpText
  >Enable verbose console logging for internal document request components.</inlineHelpText>
    <label>Enable Internal Debug</label>
    <type>Checkbox</type>
</CustomField>