force-app/main/default/objects/Document_Request_Settings__c/fields/Enable_Public_Debug__c.field-meta.xml
<CustomField>
    <fullName>Enable_Public_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >When enabled, turns on console logging for the public guest document upload component (guestDocumentUpload). Use for troubleshooting public-facing upload issues.</description>
    <inlineHelpText
  >Enable verbose console logging for the public document upload portal.</inlineHelpText>
    <label>Enable Public Debug</label>
    <type>Checkbox</type>
</CustomField>