force-app/main/default/objects/Document_Request_Settings__c/fields/Upload_Path__c.field-meta.xml
<CustomField>
    <fullName>Upload_Path__c</fullName>
    <description
  >The URL path for the document upload page (e.g., /secure-document-upload). Should start with /.</description>
    <inlineHelpText
  >Enter the path starting with / (e.g., /secure-document-upload)</inlineHelpText>
    <label>Upload Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>